<resources>
    <string name="app_name">I Want To Be A Millionaire</string>
    <string name="lbl_play_game">Play game</string>
    <string name="lbl_scores">Scores</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_credits">Info and Credits</string>
    <string name="lbl_authors">Authors</string>
    <string name="lbl_app_version">Version</string>
    <string name="author_full_name">Miguel Ángel Guillamón Carrasco</string>
    <string name="author_email">maguillamoncarrasco@gmail.com</string>
    <string name="author_twitter">\@cineexin</string>
    <string name="lbl_name">Name: </string>
    <string name="lbl_how_many_jokers">How many times can you ask for help: </string>
    <string name="lbl_longitude">Longitude: </string>
    <string name="lbl_latitude">Latitude: </string>
    <string name="lbl_add_a_friend">Add a friend</string>
    <string name="hint_your_friends_name">Enter your friend\'s name</string>
    <string-array name="number_of_jokers_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="lbl_delete_high_scores">Delete high scores</string>
    <string name="lbl_user_high_scores">Your High Scores</string>
    <string name="lbl_friends_high_scores">Your friend\'s High Scores</string>
    <string name="delete_high_scores_confirmation">Your local scores are going to be removed. Are you sure?</string>
    <string name="lbl_call_joker">Call Joker</string>
    <string name="lbl_fifty_percent_joker">50% Joker</string>
    <string name="lbl_audience_joker">Audience Joker</string>
    <string name="lbl_quit_game">Quit Game</string>
    <string name="lbl_play_for">Play for:</string>
    <string name="lbl_question">Question: </string>
    <string name="lbl_save_settings">Save settings</string>
    <string name="msg_correct_answer">Your answer is....CORRECT!!!</string>
    <string name="msg_wrong_answer">Your answer is...wrong :-(</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save_settings_confirmation">This will reset any ongoing game. Are you sure?</string>
    <string name="abandon_game_confirmation">Are you sure you want to abandon game? /:)</string>
    <string name="lbl_status">Status...</string>
    <string name="msg_adding_friend">Adding friend...</string>
    <string name="msg_friend_added_successfully">Friend successfully added</string>
    <string name="msg_friend_add_error">There was some error when adding friend!</string>
    <string name="msg_high_scores_remote_record">Record scored remotely</string>
    <string name="msg_high_scores_remote_record_error">There was some error when trying to register your score remotely!</string>
    <string name="lbl_locate_me">Locate me!</string>
    <string name="lbl_stop_locating_me">Stop locating me</string>
    <string name="msg_you_lose_the_game">Oooohh...incorrect answer. You lost the game... :-(</string>
    <string name="lbl_score_achieved">Score achieved: </string>
    <string name="msg_are_you_ready_for_your_last_answer">Hey! You\'ve reached the last answer! Are you ready to become millionaire? >:) </string>
    <string name="msg_you_won_the_game">Congratulations!!!! You won the game!!! :D</string>
</resources>
